Fixed Project Card Spacing

--- a/static/style.css
+++ b/static/style.css
@@ -228,22 +228,21 @@ p {
 
 .projects-container {
     display: flex;
-    justify-content: space-between; 
     flex-wrap: wrap; 
-    gap: 15px; 
+    justify-content: flex-start; 
+    gap: 20px;
 }
 
 .project-card {
-    width: 80%;
-    max-width: 400px; 
-    flex-direction: column;
-    flex: 1 1 calc(33.33% - 40px); 
+    flex: 1 1 calc(33.33% - 20px);
+    max-width: 400px;
     border: 1px solid #ccc;
     background-color: #D8CBAF;
     overflow: hidden;
     box-shadow: 0 2px 4px rgba(10, 80, 100, 0.16);
-    border-radius: 10px; 
+    border-radius: 10px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    margin: 0; 
 }
 
 .project-card img {
@@ -686,4 +685,5 @@ ul.job-responsibilities li {
     }
 
 }
+
 
